--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body class="no-js">
 	<script>
+		const origin = 'https://github.com/' + window.location.origin.replace(/^(https\:\/\/)(\S+?)\..*$/, '$2') + window.location.pathname.replace(/index\.html.*$/, '') + 'raw/master/'
 		window.addEventListener('load', () => {
-			const source = './_zips/all.zip';
+			const source = origin + '_zips/all.zip';
 			
 			document.body.insertAdjacentHTML('afterbegin',
 				`<a download style="display: block;
@@ -25,7 +26,7 @@
 			)
 			document.querySelectorAll('iframe')
 				.forEach(i => {
-					const zip = i.src.replace(/\/index\.html/, '.zip').replace(/(\/)banners(\/)/, '$1_zips$2')
+					const zip = origin + '_zips/' + i.src.replace(/(^.*\/banners\/(.*)\/.*$)/, '$2') + '.zip'
 					i.parentElement.insertAdjacentHTML('beforeend',
 						`<a download style="display: block;
 	                                    width: 100px;
